Research bug rotation mobile

--- a/Scripts/Stylesheet.css
+++ b/Scripts/Stylesheet.css
@@ -362,18 +362,36 @@ height: 70%;
 }
 
 
+/* Mettre tout en vh ou % pour que les rotations s'adaptent */
+
+@media screen and (orientation:portrait) {
+  html {
+    height: 100vw;
+    width: 100vh;
+    transform: rotate(90deg);
+    transform-origin: 50% 50%;
+    /* background-color: aqua; */
+  }
+
+  body{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+  }
+}
 
 
-@media only screen and (orientation:portrait) {
+@media only screen and (orientation:landscape) {
 
   html {
     height: 100vh;
-    width: 100vh;
-    transform: rotate(90deg);
+    width: 100vw;
+    /* transform: rotate(90deg); */
     /* background-color: aqua; */
   }
   body{
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
   }
 
